// Copyright 2025 mfaferek93
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

#pragma once

#include <memory>
#include <nlohmann/json.hpp>
#include <rclcpp/rclcpp.hpp>
#include <string>
#include <vector>

#include "ros2_medkit_gateway/native_topic_sampler.hpp"
#include "ros2_medkit_gateway/output_parser.hpp"
#include "ros2_medkit_gateway/ros2_cli_wrapper.hpp"
#include "ros2_medkit_gateway/type_introspection.hpp"

namespace ros2_medkit_gateway {

using json = nlohmann::json;

class DataAccessManager {
 public:
  explicit DataAccessManager(rclcpp::Node * node);

  /**
   * @brief Publish data to a specific topic
   * @param topic_path Full topic path (e.g., /chassis/brakes/command)
   * @param msg_type ROS 2 message type (e.g., std_msgs/msg/Float32)
   * @param data JSON data to publish
   * @param timeout_sec Timeout for the publish operation
   * @return JSON with publish status
   */
  json publish_to_topic(const std::string & topic_path, const std::string & msg_type, const json & data,
                        double timeout_sec = 5.0);

  /**
   * @brief Get topic sample with fallback to metadata on timeout
   *
   * If the topic is publishing, returns actual data with type info.
   * If the topic times out, returns metadata (type, schema, pub/sub counts) instead of error.
   *
   * @param topic_name Full topic path (e.g., "/powertrain/engine/temperature")
   * @param timeout_sec Timeout for data retrieval (default: 1.0 second)
   * @return JSON object with one of two structures:
   *   - status="data": {topic, timestamp, data, status, type, type_info, publisher_count, subscriber_count}
   *   - status="metadata_only": {topic, timestamp, status, type, type_info, publisher_count, subscriber_count}
   * @throws TopicNotAvailableException if topic doesn't exist or metadata cannot be retrieved
   */
  json get_topic_sample_with_fallback(const std::string & topic_name, double timeout_sec = 1.0);

  /**
   * @brief Get component data with fallback to metadata for unavailable topics
   *
   * @param component_namespace Component's namespace
   * @param timeout_sec Timeout per topic (default: 1.0 second)
   * @return JSON array with topic data/metadata
   */
  json get_component_data_with_fallback(const std::string & component_namespace, double timeout_sec = 1.0);

  /**
   * @brief Get the type introspection instance
   */
  TypeIntrospection * get_type_introspection() const {
    return type_introspection_.get();
  }

  /**
   * @brief Get component data using native rclcpp APIs (fast, no CLI overhead)
   *
   * This method uses the NativeTopicSampler to:
   * - Discover topics via node_->get_topic_names_and_types() instead of `ros2 topic list`
   * - Check publisher counts before sampling to skip idle topics immediately
   * - Return metadata for topics without publishers without waiting for timeout
   *
   * @param component_namespace Component's namespace (e.g., "/powertrain/engine")
   * @param timeout_sec Timeout per topic for topics that have publishers
   * @return JSON array with topic data/metadata
   */
  json get_component_data_native(const std::string & component_namespace, double timeout_sec = 1.0);

  /**
   * @brief Get single topic sample using native rclcpp APIs
   *
   * Fast path for single topic sampling with publisher count check.
   *
   * @param topic_name Full topic path
   * @param timeout_sec Timeout for sampling (only used if topic has publishers)
   * @return JSON with topic data or metadata
   */
  json get_topic_sample_native(const std::string & topic_name, double timeout_sec = 1.0);

 private:
  /**
   * @brief Find all topics under a given namespace using native API
   */
  std::vector<std::string> find_component_topics_native(const std::string & component_namespace);

  /**
   * @brief Convert TopicSampleResult to JSON with type info enrichment
   */
  json sample_result_to_json(const TopicSampleResult & sample);

  rclcpp::Node * node_;
  std::unique_ptr<ROS2CLIWrapper> cli_wrapper_;
  std::unique_ptr<OutputParser> output_parser_;
  std::unique_ptr<TypeIntrospection> type_introspection_;
  std::unique_ptr<NativeTopicSampler> native_sampler_;
  int max_parallel_samples_;
};

}  // namespace ros2_medkit_gateway
